@@ -1,23 +1,33 @@
 package com.mohamedibrihen.watc.service;
 
 import com.gargoylesoftware.htmlunit.WebClient;
+import com.gargoylesoftware.htmlunit.html.DomElement;
+import com.gargoylesoftware.htmlunit.html.HtmlElement;
 import com.gargoylesoftware.htmlunit.html.HtmlPage;
 import com.mohamedibrihen.watc.model.Movie;
 import com.mohamedibrihen.watc.utils.Consts;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
 import java.util.Optional;
 
-// TODO use a logger
 @Service
 public class MovieService {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger(MovieService.class);
+
+    private final WebClient client;
+
+    public MovieService(WebClient client) {
+        this.client = client;
+    }
+
     public Optional<Movie> getMovie(String title) {
         Movie movie = null;
-
-
-        WebClient client = new WebClient();
 
         // TODO check if the website is online before querying.
 
@@ -26,21 +36,21 @@ public class MovieService {
         client.getOptions().setJavaScriptEnabled(false);
 
         try {
-            String searchUrl = Consts.AFTER_CREDITS_SEARCH_URL_TEMPLATE + URLEncoder.encode(title, "UTF-8");
+            String searchUrl = Consts.AFTER_CREDITS_SEARCH_URL_TEMPLATE + URLEncoder.encode(title, String.valueOf(StandardCharsets.UTF_8));
             HtmlPage page = client.getPage(searchUrl);
 
-            /*
-             * THE ALGORITHM (V1) :
-             *
-             * IF there isn't any element THEN 404
-             *
-             * Get the list of elements
-             *
-             * IF there is more than one element THEN pick the first one (the most relevant)
-             *
-             * Populate a Movie object.
-             *
-             */
+
+            List<HtmlElement> elements = page.getByXPath("//div[contains(@class, 'td-module-thumb')]");
+
+            // TODO Filter by the right matching title then get the link ant movie name (use Streams API).
+            for (HtmlElement element : elements) {
+                DomElement domElement = element.getFirstElementChild();
+                if (domElement != null) {
+
+                }
+            }
+            // TODO get the href+title attribut
+
 
         } catch (Exception e) {
             e.printStackTrace();
